--- a/Ruan6.html
+++ b/Ruan6.html
@@ -16,7 +16,7 @@
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("/images/cover.jpg");
+  background-image: url("images/cover.jpg");
   min-height: 100%;
   overflow: hidden;
 }
@@ -117,7 +117,7 @@
        <p><a href="#program" class="button"><i class="fa fa-th"> </i> Lihat Program</a></p>
      </div>
      <div class="half">
-       <img class="image round-large" src="/images/room.jpeg" width="500px">
+       <img class="image round-large" src="images/room.jpeg" width="500px">
      </div>
    </div>
  </section>
@@ -129,7 +129,7 @@
   <div class="row-padding" style="margin-top:64px">
     <div class="col l2 m5 margin-bottom">
       <div class="card">
-        <img src="/images/hanna.jpg" alt="Hanna" style="filter:saturate(90%)">
+        <img src="images/hanna.jpg" alt="Hanna" style="filter:saturate(90%)">
         <div class="container">
           <h4 class="link">Hanna Tiara Andarlia</h4>
           <p class="opacity">CEO & Founder</p>
@@ -140,7 +140,7 @@
     </div>
     <div class="col l2 m5 margin-bottom">
       <div class="card">
-        <img src="/images/syifa.jpg" alt="Syifa">
+        <img src="images/syifa.jpg" alt="Syifa">
         <div class="container">
           <h4 class="link">Lailatus Syifa</h4>
           <p class="opacity">CPO</p>
@@ -151,7 +151,7 @@
     </div>
     <div class="col l2 m5 margin-bottom">
       <div class="card">
-        <img src="/images/lutfi.jpg" alt="Lutfi">
+        <img src="images/lutfi.jpg" alt="Lutfi">
         <div class="container">
           <h4 class="link">Lutfi Septian Akbar</h4>
           <p class="opacity">COO</p>
@@ -162,7 +162,7 @@
     </div>
     <div class="col l2 m5 margin-bottom">
       <div class="card">
-        <img src="/images/sarah.jpg" alt="Sarah" style="filter:saturate(90%)">
+        <img src="images/sarah.jpg" alt="Sarah" style="filter:saturate(90%)">
         <div class="container">
           <h4 class="link">Sarah Astari</h4>
           <p class="opacity">CFO</p>
@@ -173,7 +173,7 @@
     </div>
     <div class="col l2 m5 margin-bottom">
       <div class="card">
-        <img src="/images/yayang.jpg" alt="Yayang">
+        <img src="images/yayang.jpg" alt="Yayang">
         <div class="container">
           <h4 class="link">Yayang Wijaya</h4>
           <p class="opacity">CTO</p>
@@ -212,13 +212,13 @@
 
   <div class="row-padding" style="margin-top:64px">
     <div class="col l3 m6">
-      <img src="/images/do.jpeg" style="width:100%" class="img-program hover-opacity" alt="A microphone">
+      <img src="images/do.jpeg" style="width:100%" class="img-program hover-opacity" alt="A microphone">
     </div>
     <div class="col l3 m6">
-      <img src="/images/chat.jpeg" style="width:100%" class="img-program hover-opacity" alt="A phone">
+      <img src="images/chat.jpeg" style="width:100%" class="img-program hover-opacity" alt="A phone">
     </div>
     <div class="col l3 m6">
-      <img src="/images/teamwork.jpeg" style="width:100%" class="img-program hover-opacity" alt="A drone">
+      <img src="images/teamwork.jpeg" style="width:100%" class="img-program hover-opacity" alt="A drone">
     </div>
     <div class="col l3 m6">
       <img src="/images/class.jpeg" style="width:100%" class="img-program hover-opacity" alt="Soundbox">
@@ -227,16 +227,16 @@
 
   <div class="row-padding section">
     <div class="col l3 m6">
-      <img src="/images/schedule.jpeg" style="width:100%" class="hover-opacity" alt="A tablet">
+      <img src="images/schedule.jpeg" style="width:100%" class="hover-opacity" alt="A tablet">
     </div>
     <div class="col l3 m6">
-      <img src="/images/video.jpeg" style="width:100%" class="hover-opacity" alt="A camera">
+      <img src="images/video.jpeg" style="width:100%" class="hover-opacity" alt="A camera">
     </div>
     <div class="col l3 m6">
-      <img src="/images/exam.jpeg" style="width:100%" class="hover-opacity" alt="A typewriter">
+      <img src="images/exam.jpeg" style="width:100%" class="hover-opacity" alt="A typewriter">
     </div>
     <div class="col l3 m6">
-      <img src="/images/graduation.jpeg" style="width:100%" class="hover-opacity" alt="A tableturner">
+      <img src="images/graduation.jpeg" style="width:100%" class="hover-opacity" alt="A tableturner">
     </div>
   </div>
 </div>
@@ -315,7 +315,7 @@
       <p><button class="input submit button" type="submit"><i class="fa fa-paper-plane"></i>Kirim Pesan</button></p>
     </form>
     <!-- Image of location/map -->
-    <img src="/images/liveyourdream.jpeg" class="image" style="width:100%; margin-top:48px">
+    <img src="images/liveyourdream.jpeg" class="image" style="width:100%; margin-top:48px">
   </div>
 </div>
 
