--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <img src="images/teamwork.jpeg" style="width:100%" class="img-program hover-opacity" alt="A drone">
     </div>
     <div class="col l3 m6">
-      <img src="/images/class.jpeg" style="width:100%" class="img-program hover-opacity" alt="Soundbox">
+      <img src="images/class.jpeg" style="width:100%" class="img-program hover-opacity" alt="Soundbox">
     </div>
   </div>
 
