--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <h4 class="link">Lailatus Syifa</h4>
           <p class="opacity">CPO</p>
           <p>Hiduplah seolah kau akan mati besok dan belajarlah seolah kau hidup selamanya. Maka takkan ada kata menyesal di hari kemudian.</p>
-          <p><a class="button block" href="https://www.linkedin.com/in/lailatus-syifa-003032122/" target="_blank"><i class="fa fa-envelope"></i> Hubungi</a></p>
+          <p><a class="button block"><i class="fa fa-envelope"></i> Hubungi</a></p>
         </div>
       </div>
     </div>
