--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <span class="jumbo hide-small">Mulai menimba ilmu dari ruang studimu</span><br>
     <span class="hide-large hide-medium" style="font-size:45px">Belajar dalam ruanganmu</span><br>
     <span class="large" style="letter-spacing:2px">Raih mimpi dan prestasimu bersama Ruan6.</span>
-    <p><a href="#about" class="button large margin-top" style="filter:saturate(200%)"><i class="fa fa-angle-double-right"> Raih posisimu hari ini!</i></a></p>
+    <p><a href="#tentangkami" class="button large margin-top" style="filter:saturate(200%)"><i class="fa fa-angle-double-right"> Raih posisimu hari ini!</i></a></p>
   </div>
   <div class="display-bottomleft large" style="padding:24px 48px; color:white">
     <i class="fa fa-twitter hover-opacity"></i>
@@ -320,7 +320,7 @@
 </div>
 
 <footer class="center padding-64">
-  <a href="#home" class="button"><i class="fa fa-arrow-up"></i> Ke Atas</a>
+  <a href="#beranda" class="button"><i class="fa fa-arrow-up"></i> Ke Atas</a>
   <div class="xlarge section" style="padding:24px 48px">
     <i class="fa fa-twitter hover-opacity"></i>
     <i class="fa fa-facebook-official hover-opacity"></i>
